channel一覧で「メッセージを追加」ボタンを設置する

--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -19,7 +19,7 @@
       </div>
 
       <div class="add_message">
-        <a href="#" class="add_message_link">+ メッセージを追加</a>
+        <%= link_to "+ メッセージを追加", new_channel_path, class: "add_message_link" %>
       </div>
 
       <div class="messages">
