メッセージを新規に追加する

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -19,7 +19,7 @@
       </div>
 
       <div class="add_message">
-        <%= link_to "+ メッセージを追加", new_channel_message_path, class: "add_message_link" %>
+        <%= link_to "+ メッセージを追加", new_channel_message_path(1), class: "add_message_link" %>
       </div>
 
       <div class="messages">
