--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="back">
-    <%= link_to "<", channels_path, class: "back"%>
+    <%= link_to "<", channel_path(1), class: "back"%>
   </div>
   <div class="channel_name text-center">
     <h3># general</h3>
@@ -12,10 +12,14 @@
     <div class="timing_title">送信タイミング</div>
 
     <div class="timing_desc">チャンネル登録して
-      <p><input type="text"> 日後の<input type="text"> に送信する</p>
-      <textarea>aaa</textarea>
-      <p><input type="file"></p>
-      <input type="submit" value="送信する">
+      <%= form_with(model: @message, url: channel_messages_path) do |m| %>
+        <%= m.fields_for :push_timing do |p| %>
+          <%= p.select :in_x_days, x_days_after %>日後の
+          <%= p.time_select :time, {prompt: false, ignore_date: true, include_seconds: true, minute_step: 1}  %>に送信する
+        <% end %>
+        <p><%= m.text_area :message, size: "60x12" %></p>
+        <%= m.submit "postする" %>
+      <% end %>
     </div>
     <div class="tabs">
       <input id="all" type="radio" name="tab_item" checked>
