--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -14,10 +14,13 @@
     <div class="timing_desc">チャンネル登録して
       <%= form_with(model: @message, url: channel_message_path) do |m| %>
         <%= m.fields_for :push_timing do |p| %>
-        <p><%= p.select :in_x_days, x_days_after %>日後の
-          <%= p.time_select :time, {prompt: false, ignore_date: true, include_seconds: true, minute_step: 1}  %>に送信する</p>
+          <%= p.select :in_x_days, x_days_after %>日後の
+          <%= p.time_select :time, {prompt: false, ignore_date: true, include_seconds: true, minute_step: 1}  %>に送信する
         <% end %>
         <p><%= m.text_area :message, size: "60x12" %></p>
+        画像を添付する
+        <p><%= m.label :image, "ここをクリックして画像を選択" %>
+          <%= m.file_field :image, accept: 'image/*' %></p>
         <%= m.submit "postする" %>
       <% end %>
     </div>
