channel画面のメッセージ一覧で送信者の名前を表示する

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -37,7 +37,7 @@
           </div>
           <div class="post_data">
             <div class="post_name">
-              <p>sdk-quadra</p>
+              <p><%= @user_info_realname %></p>
             </div>
             <div class="post_content">
               <p>何か質問してみましょう</p>
