channel画面のメッセージ一覧で送信者のicon画像を表示する

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -33,7 +33,7 @@
 
         <div class="post_contents">
           <div class="icon">
-            <img src="https://ca.slack-edge.com/T010E4HB6R4-U010BU9GGBX-d79dd0119a68-512" class="post_icon">
+            <%= image_tag(@user_info_profile_image, class: "post_icon") %>
           </div>
           <div class="post_data">
             <div class="post_name">
