--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="back">
-    <%= link_to "<", workspace_channel_path(1, 1), class: "back"%>
+    <%= link_to "<", workspace_channel_path(1, @channel), class: "back"%>
   </div>
   <div class="channel_name text-center">
     <h3># general</h3>
