--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -1,2 +1,2 @@
 <h1>ワークスペース</h1>
-<%= link_to "general", workspace_channel_path(1, 1) %><br />
+<%= link_to "general", workspace_channel_path(session[:workspace_id], @general_channel.id) %><br />
