メッセージの送信数/既読数を記録、表示する

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -19,7 +19,7 @@
       </div>
 
       <div class="stat">
-        <p>送信済合計 1234 / 既読数合計 998</p>
+        <p>送信済合計 <%= @pushed_count %> / 既読数合計 <%= @is_read %></p>
       </div>
 
       <div class="add_message">
