--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -2,109 +2,54 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.hidden {
-  display: none;
-}
-body {
-  margin: 0;
-}
 .back {
-  color: white;
+  position: absolute;
   text-decoration: none;
-}
-.header {
-  margin-top: 0;
-  background-color: #34163b;
   color: white;
-  padding: 1rem;
-  display: flex;
-  flex-direction: row;
 }
 
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
+.message {
+  min-height: 40rem;
+
+  &__channel-title {
+    margin-top: 0;
+    background-color: #34163b;
+    color: white;
+    padding: 1rem;
+    position: relative;
+  }
+
+  &__channel-name {
+    width: 100%;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
-.channel_name {
-  width: 100%;
+.message-body {
+  width:  30rem;
+  margin: 0 auto;
+  font-size: 0.9rem;
 }
 
-.timing_title {
-  font-weight: bold;
-}
-
-.message_body {
-  width: 100%;
-}
-
-.message_timing {
+.message-timing {
   width:  34rem;
   margin: 0 auto;
   font-size: 0.9rem;
 }
 
-.timing_title {
-  margin-top: 2rem;
+.message-form {
+  &__button-submit {
+    text-align: center;
+    margin: 3rem;
+  }
+
+  &__preview-img {
+    width: 200px;
+  }
 }
 
-.timing_desc {
-  margin-bottom: 2rem;
-}
-
-/*タブ切り替え全体のスタイル*/
-.tabs {
-  padding-bottom: 40px;
-  background-color: #fff;
-  width: 34rem;
-}
-
-/*タブのスタイル*/
-.tab_item {
-  width: calc(100%/4);
-  height: 50px;
-  border-bottom: 1px solid #5ab4bd;
-  background-color: #d9d9d9;
-  line-height: 50px;
-  font-size: 16px;
-  text-align: center;
-  color: #565656;
-  display: block;
-  float: left;
-  text-align: center;
-  font-weight: bold;
-  transition: all 0.2s ease;
-}
-.tab_item:hover {
-  opacity: 0.75;
-}
-
-/*ラジオボタンを全て消す*/
-input[name="tab_item"] {
+.hidden {
   display: none;
-}
-
-/*タブ切り替えの中身のスタイル*/
-.tab_content {
-  display: none;
-  padding: 20px;
-  clear: both;
-  overflow: hidden;
-  border: 2px solid #5ab4bd;
-}
-
-/*選択されているタブのコンテンツのみを表示*/
-#all:checked ~ div > #all_content,
-#programming:checked ~ div > #programming_content {
-  display: block;
-}
-
-/*選択されているタブのスタイルを変える*/
-.tabs input:checked + .tab_item {
-  background-color: #5ab4bd;
-  color: #fff;
-}
-
-.message_button {
-  text-align: center;
 }
