--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,8 @@
 
   <body>
     <%= yield %>
+    <footer>
+      <p class="footer__copyright">&copy; Copyright 2020 Slack De Step. All rights reserved.</p>
+    </footer>
   </body>
 </html>
