--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -26,7 +26,7 @@
       <% else %>
         <p><img id="preview" class="message-form__preview-img"></p>
       <% end %>
-      <p><%= button_tag "画像を削除する", id: "deleteImg", class: "message-form__button-delete-img" %></p>
+      <p><%= button_tag "画像を削除する", type: "button", id: "deleteImg", class: "message-form__button-delete-img" %></p>
       <p><%= check_box_tag "delete_image", true, false, id: "delete_check", class: "hidden" %></p>
 
       <div class="message-form__button-submit">
