画像の有無で送信方法を変える

--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -62,6 +62,7 @@
           document.getElementById("preview").src = reader.result;
           document.getElementById("deleteImg").style.display = "block";
           // localImageWidth(reader.result);
+          document.getElementById("delete_check").checked = false;
 
       }
       if (file) {
