--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -6,86 +6,45 @@
     </h3>
   </div>
 
-  <div class="message-body">
-    <%= form_with(model: @message, url: workspace_channel_message_path, class: "message-form") do |m| %>
-
-      <h4 class="message-form__title-timing">送信タイミング *</h4>
-      チャンネル登録して
-
-      <%= m.fields_for :push_timing do |p| %>
-        <%= p.select :in_x_days, x_days_after %>日後の
-        <%= p.time_select :time, {prompt: false, ignore_date: true, include_seconds: true, minute_step: 1} %>に送信する
-      <% end %>
-
-      <h4 class="message-form__title-message">メッセージ *</h4>
-      <p><%= m.text_area :message, size: "60x12", class: "message-form__textarea" %></p>
-      <p><%= m.label :image, "ここをクリックして画像を選択" %>
-        <%= m.file_field :image, onchange: 'previewFileWithId()', accept: 'image/*', class: "hidden" %></p>
-      <% if @message.image_url.present? %>
-        <p><%= image_tag(@message.image_url, {id: 'preview', class: "message-form__preview-img"}) %></p>
-      <% else %>
-        <p><img id="preview" class="message-form__preview-img"></p>
-      <% end %>
-      <p><%= button_tag "画像を削除する", type: "button", id: "deleteImg", class: "message-form__button-delete-img" %></p>
-      <p><%= check_box_tag "delete_image", true, false, id: "delete_check", class: "hidden" %></p>
-
-      <div class="message-form__button-submit">
-        <input type="submit" value="テスト送信" class="message-form__button-test-submit">
-        <input type="submit" name="commit" value="postする" data-disable-with="postする" class="message-form__button-commit">
-      </div>
-
-    <% end %>
-  </div>
-</div>
+  <%= render 'form', workspace: @workspace, channel: @channel, message: @message %>
 
 </div>
-
-
-
-
-
 
 <script>
-  //初期値
-  var preview = document.getElementById("preview");
-  if (preview.src === "" || preview.src === null) {
-      document.getElementById("deleteImg").style.display = "none";
-  }
+    //初期値
+    var preview = document.getElementById("preview");
+    if (preview.src === "" || preview.src === null) {
+        document.getElementById("deleteImg").style.display = "none";
+    }
 
-  function previewFileWithId() {
-      const target = this.event.target;
-      const file = target.files[0];
-      const reader  = new FileReader();
-      console.log(target.files.length);
-      reader.onloadend = function () {
-          // preview.src = reader.result;
-          document.getElementById("preview").src = reader.result;
-          document.getElementById("deleteImg").style.display = "block";
-          // localImageWidth(reader.result);
-          document.getElementById("delete_check").checked = false;
+    function previewFileWithId() {
+        const target = this.event.target;
+        const file = target.files[0];
+        const reader  = new FileReader();
+        console.log(target.files.length);
+        reader.onloadend = function () {
+            document.getElementById("preview").src = reader.result;
+            document.getElementById("deleteImg").style.display = "block";
+            document.getElementById("delete_check").checked = false;
 
-      }
-      if (file) {
-          reader.readAsDataURL(file);
-      } else {
-          document.getElementById("preview").src = '';
-          document.getElementById("deleteImg").style.display = "none";
-      }
-  }
+        }
+        if (file) {
+            reader.readAsDataURL(file);
+        } else {
+            document.getElementById("preview").src = '';
+            document.getElementById("deleteImg").style.display = "none";
+        }
+    }
 
-  function deleteImg() {
-      document.getElementById("preview").src = '';
-  }
+    var deleteBtn = document.getElementById("deleteImg");
+    deleteBtn.addEventListener("click", function() {
+        var result = window.confirm("本当に削除しますか？");
 
-  var deleteBtn = document.getElementById("deleteImg");
-  deleteBtn.addEventListener("click", function() {
-      var result = window.confirm("本当に削除しますか？");
-
-      if (result) {
-          document.getElementById("preview").src = '';
-          document.getElementById("delete_check").checked = true;
-          document.getElementById("deleteImg").style.display = "none";
-      } else {
-      }
-  })
+        if (result) {
+            document.getElementById("preview").src = '';
+            document.getElementById("delete_check").checked = true;
+            document.getElementById("deleteImg").style.display = "none";
+        } else {
+        }
+    })
 </script>
