omniauthログインをsign in with slackに切り替える

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -8,6 +8,6 @@
 
   <div class="landing-page-cta">
     <p>今すぐ使ってみる</p>
-    <%= link_to image_tag("https://platform.slack-edge.com/img/sign_in_with_slack.png"), '/auth/slack' %>
+    <%= link_to image_tag("https://platform.slack-edge.com/img/sign_in_with_slack.png"), 'https://slack.com/oauth/v2/authorize?client_id=1014153380854.1396596614065&scope=channels:history,channels:join,channels:read,chat:write,files:write,im:history,im:read,team:read,users:read&user_scope=identity.avatar,identity.basic,identity.email,identity.team' %>
   </div>
 </div>
