--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -11,13 +11,12 @@
 
     <% @workspaces.each do |workspace| %>
       <div class="workspace">
-        <%= link_to image_tag(workspace.icon_url, class: "workspace__icon"), workspace_channel_path(workspace.app.id, general_channel(workspace.app.id)), class: "workspace__name" %>
-        <p class="workspace__name"><%= link_to workspace.name, workspace_channel_path(workspace.app.id, general_channel(workspace.app.id)) %></p>
+        <%= link_to image_tag(workspace.icon_url, class: "workspace__icon"), workspace_channel_path(workspace.id, general_channel(workspace.app.id)), class: "workspace__name" %>
+        <p class="workspace__name"><%= link_to workspace.name, workspace_channel_path(workspace.id, general_channel(workspace.app.id)) %></p>
       </div>
     <% end %>
 
     <div class="workspace workspace-add">
-      <%#= image_tag("add.png", class: "workspace__icon") %>
       <%= link_to image_tag("add.png", class: "workspace__icon"), "/", class: "workspace__name" %>
       <p class="workspace__name"><%= link_to "新規追加", "/" %></p>
     </div>
