--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -26,12 +26,10 @@
       <% end %>
     <p><%= button_tag "画像を削除する", type: "button", id: "deleteImg", class: "message-form__button-delete-img" %></p>
     <p><%= check_box_tag "delete_image", true, false, id: "delete_check", class: "hidden" %></p>
-    <% ##TODO: リリース時、即時postは削除する事 %>
-    <p>post now<%= check_box_tag "post_now", true, false %></p>
 
     <div class="message-form__button-submit">
       <%= m.submit "テスト送信", class: "message-form__button-test-submit" %>
-      <%= m.submit "postする", class: "message-form__button-commit" %>
+      <%= m.submit "登録", class: "message-form__button-commit" %>
     </div>
 
   <% end %>
