--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -39,8 +39,8 @@
         </div>
 
         <div class="channel-message-menu">
-          <%= link_to "編集", edit_workspace_channel_message_path(1, message.channel_id, message.id) %><br />
-          <%= link_to "削除", workspace_channel_message_path(1, message.channel_id, message.id), method: :delete %>
+          <%= link_to "編集", edit_workspace_channel_message_path(@workspace, message.channel_id, message.id) %><br />
+          <%= link_to "削除", workspace_channel_message_path(@workspace, message.channel_id, message.id), method: :delete %>
         </div>
 
         <div class="channel-message">
