--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="message">
   <div class="message__channel-title">
-    <%= link_to "<", workspace_channel_path(1, @channel), class: "back" %>
+    <%= link_to "<", workspace_channel_path(@workspace, @channel), class: "back" %>
     <h3 class="message__channel-name">
       # <%= @channel.name %>
     </h3>
