--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,8 +1,8 @@
 <div class="wrapper">
   <div class="channels">
-    <%= link_to image_tag(@workspace.icon_url, class: "channels__ws-icon"), workspaces_path %>
+    <%= link_to image_tag(@workspace.icon_url, class: "channels__ws-icon", alt: "workspace_icon"), workspaces_path %>
     <% @channels.each do |channel| %>
-      <div class="channel <%= "channel__e__selected" if channel.id == @channel.id %>">
+      <div class="channel<%= " channel__e__selected" if channel.id == @channel.id %>">
         <div class="channel__name">
           <%= link_to channel.name, channel.id.to_s %>
         </div>
