--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -11,7 +11,7 @@
 
     <% @workspaces.each do |workspace| %>
       <div class="workspace">
-        <%= link_to image_tag(workspace.icon_url, class: "workspace__icon"), workspace_channel_path(workspace.id, general_channel(workspace.app.id)), class: "workspace__name" %>
+        <%= link_to image_tag(workspace.icon_url, class: "workspace__icon", alt: "workspace_icon"), workspace_channel_path(workspace.id, general_channel(workspace.app.id)), class: "workspace__name" %>
         <p class="workspace__name"><%= link_to workspace.name, workspace_channel_path(workspace.id, general_channel(workspace.app.id)) %></p>
       </div>
     <% end %>
